install yajra datatables for assessments index in foundation profile page.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,7 +9,14 @@
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
 }
+
+@import url('https://fonts.bunny.net/css?family=Nunito');
+
+/* @import 'variables'; */
 @import "bootstrap/dist/css/bootstrap.min.css";
 @import "bootstrap-icons/font/bootstrap-icons.min.css";
+@import "datatables.net-bs5/css/dataTables.bootstrap5.min.css";
+@import "datatables.net-buttons-bs5/css/buttons.bootstrap5.min.css";
+@import 'datatables.net-select-bs5/css/select.bootstrap5.css';
 @import "../assets/vendor/glightbox/css/glightbox.min.css";
 @import "../assets/css/main.css";
