handle result details and refactor submit result

--- a/resources/assets/css/main.css
+++ b/resources/assets/css/main.css
@@ -2328,3 +2328,15 @@ section,
 .starter-section {
   /* Add your styles here */
 }
+
+Chrome, Safari, Edge, Opera
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
